gen/SolidityParser.py
# Generated from /Users/jeongdahyeon/solidity-visitor-flattening/Solidity.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SolidityParser ( Parser ):

    grammarFileName = "Solidity.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'pragma'", "';'", "'zkay'", "'solidity'", 
                     "'^'", "'~'", "'>='", "'>'", "'<'", "'<='", "'='", 
                     "'contract'", "'{'", "'}'", "'constructor'", "'function'", 
                     "'returns'", "'('", "','", "')'", "'enum'", "'.'", 
                     "'mapping'", "'!'", "'=>'", "'if'", "'else'", "'while'", 
                     "'for'", "'do'", "'return'", "'address'", "'address payable'", 
                     "'bool'", "'var'", "'string'", "'bytes'", "'byte'", 
                     "'++'", "'--'", "'['", "']'", "'+'", "'-'", "'**'", 
                     "'*'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", 
                     "'=='", "'!='", "'&&'", "'||'", "'?'", "':'", "'|='", 
                     "'^='", "'&='", "'<<='", "'>>='", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'@'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'me'", "'all'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'anonymous'", "'break'", "'constant'", "'continue'", 
                     "'external'", "'indexed'", "'internal'", "'payable'", 
                     "'private'", "'public'", "'pure'", "'view'", "'final'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Uint", "Int", "Byte", "Fixed", 
                      "Ufixed", "MeKeyword", "AllKeyword", "VersionLiteral", 
                      "BooleanLiteral", "DecimalNumber", "HexNumber", "ReservedKeyword", 
                      "AnonymousKeyword", "BreakKeyword", "ConstantKeyword", 
                      "ContinueKeyword", "ExternalKeyword", "IndexedKeyword", 
                      "InternalKeyword", "PayableKeyword", "PrivateKeyword", 
                      "PublicKeyword", "PureKeyword", "ViewKeyword", "FinalKeyword", 
                      "Identifier", "StringLiteral", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_sourceUnit = 0
    RULE_pragmaDirective = 1
    RULE_pragma = 2
    RULE_version = 3
    RULE_versionOperator = 4
    RULE_versionConstraint = 5
    RULE_contractDefinition = 6
    RULE_contractPart = 7
    RULE_stateVariableDeclaration = 8
    RULE_constructorDefinition = 9
    RULE_functionDefinition = 10
    RULE_returnParameters = 11
    RULE_modifierList = 12
    RULE_modifier = 13
    RULE_parameterList = 14
    RULE_parameter = 15
    RULE_enumValue = 16
    RULE_enumDefinition = 17
    RULE_variableDeclaration = 18
    RULE_typeName = 19
    RULE_userDefinedTypeName = 20
    RULE_mapping = 21
    RULE_stateMutability = 22
    RULE_block = 23
    RULE_statement = 24
    RULE_expressionStatement = 25
    RULE_ifStatement = 26
    RULE_whileStatement = 27
    RULE_simpleStatement = 28
    RULE_forStatement = 29
    RULE_doWhileStatement = 30
    RULE_continueStatement = 31
    RULE_breakStatement = 32
    RULE_returnStatement = 33
    RULE_variableDeclarationStatement = 34
    RULE_elementaryTypeName = 35
    RULE_expression = 36
    RULE_functionCallArguments = 37
    RULE_tupleExpression = 38
    RULE_elementaryTypeNameExpression = 39
    RULE_numberLiteral = 40
    RULE_annotatedTypeName = 41
    RULE_identifier = 42

    ruleNames =  [ "sourceUnit", "pragmaDirective", "pragma", "version", 
                   "versionOperator", "versionConstraint", "contractDefinition", 
                   "contractPart", "stateVariableDeclaration", "constructorDefinition", 
                   "functionDefinition", "returnParameters", "modifierList", 
                   "modifier", "parameterList", "parameter", "enumValue", 
                   "enumDefinition", "variableDeclaration", "typeName", 
                   "userDefinedTypeName", "mapping", "stateMutability", 
                   "block", "statement", "expressionStatement", "ifStatement", 
                   "whileStatement", "simpleStatement", "forStatement", 
                   "doWhileStatement", "continueStatement", "breakStatement", 
                   "returnStatement", "variableDeclarationStatement", "elementaryTypeName", 
                   "expression", "functionCallArguments", "tupleExpression", 
                   "elementaryTypeNameExpression", "numberLiteral", "annotatedTypeName", 
                   "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    Uint=70
    Int=71
    Byte=72
    Fixed=73
    Ufixed=74
    MeKeyword=75
    AllKeyword=76
    VersionLiteral=77
    BooleanLiteral=78
    DecimalNumber=79
    HexNumber=80
    ReservedKeyword=81
    AnonymousKeyword=82
    BreakKeyword=83
    ConstantKeyword=84
    ContinueKeyword=85
    ExternalKeyword=86
    IndexedKeyword=87
    InternalKeyword=88
    PayableKeyword=89
    PrivateKeyword=90
    PublicKeyword=91
    PureKeyword=92
    ViewKeyword=93
    FinalKeyword=94
    Identifier=95
    StringLiteral=96
    WS=97
    COMMENT=98
    LINE_COMMENT=99

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.pragma_directive = None # PragmaDirectiveContext
            self._contractDefinition = None # ContractDefinitionContext
            self.contracts = list() # of ContractDefinitionContexts

        def EOF(self):
            return self.getToken(SolidityParser.EOF, 0)

        def pragmaDirective(self):
            return self.getTypedRuleContext(SolidityParser.PragmaDirectiveContext,0)


        def contractDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.ContractDefinitionContext)
            else:
                return self.getTypedRuleContext(SolidityParser.ContractDefinitionContext,i)


        def getRuleIndex(self):
            return SolidityParser.RULE_sourceUnit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSourceUnit" ):
                return visitor.visitSourceUnit(self)
            else:
                return visitor.visitChildren(self)




    def sourceUnit(self):

        localctx = SolidityParser.SourceUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourceUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            localctx.pragma_directive = self.pragmaDirective()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SolidityParser.T__11:
                self.state = 87
                localctx._contractDefinition = self.contractDefinition()
                localctx.contracts.append(localctx._contractDefinition)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(SolidityParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pragma(self):
            return self.getTypedRuleContext(SolidityParser.PragmaContext,0)


        def getRuleIndex(self):
            return SolidityParser.RULE_pragmaDirective

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPragmaDirective" ):
                return visitor.visitPragmaDirective(self)
            else:
                return visitor.visitChildren(self)




    def pragmaDirective(self):

        localctx = SolidityParser.PragmaDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pragmaDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(SolidityParser.T__0)
            self.state = 96
            self.pragma()
            self.state = 97
            self.match(SolidityParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SolidityParser.RULE_pragma

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VersionPragmaContext(PragmaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SolidityParser.PragmaContext
            super().__init__(parser)
            self.name = None # Token
            self.ver = None # VersionContext
            self.copyFrom(ctx)

        def version(self):
            return self.getTypedRuleContext(SolidityParser.VersionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersionPragma" ):
                return visitor.visitVersionPragma(self)
            else:
                return visitor.visitChildren(self)



    def pragma(self):

        localctx = SolidityParser.PragmaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pragma)
        self._la = 0 # Token type
        try:
            localctx = SolidityParser.VersionPragmaContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            localctx.name = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==SolidityParser.T__2 or _la==SolidityParser.T__3):
                localctx.name = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 100
            localctx.ver = self.version()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def versionConstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.VersionConstraintContext)
            else:
                return self.getTypedRuleContext(SolidityParser.VersionConstraintContext,i)


        def getRuleIndex(self):
            return SolidityParser.RULE_version

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersion" ):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)




    def version(self):

        localctx = SolidityParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_version)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.versionConstraint()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SolidityParser.T__4) | (1 << SolidityParser.T__5) | (1 << SolidityParser.T__6) | (1 << SolidityParser.T__7) | (1 << SolidityParser.T__8) | (1 << SolidityParser.T__9) | (1 << SolidityParser.T__10))) != 0) or _la==SolidityParser.VersionLiteral:
                self.state = 103
                self.versionConstraint()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SolidityParser.RULE_versionOperator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersionOperator" ):
                return visitor.visitVersionOperator(self)
            else:
                return visitor.visitChildren(self)




    def versionOperator(self):

        localctx = SolidityParser.VersionOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_versionOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SolidityParser.T__4) | (1 << SolidityParser.T__5) | (1 << SolidityParser.T__6) | (1 << SolidityParser.T__7) | (1 << SolidityParser.T__8) | (1 << SolidityParser.T__9) | (1 << SolidityParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VersionLiteral(self):
            return self.getToken(SolidityParser.VersionLiteral, 0)

        def versionOperator(self):
            return self.getTypedRuleContext(SolidityParser.VersionOperatorContext,0)


        def getRuleIndex(self):
            return SolidityParser.RULE_versionConstraint

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersionConstraint" ):
                return visitor.visitVersionConstraint(self)
            else:
                return visitor.visitChildren(self)




    def versionConstraint(self):

        localctx = SolidityParser.VersionConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_versionConstraint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SolidityParser.T__4) | (1 << SolidityParser.T__5) | (1 << SolidityParser.T__6) | (1 << SolidityParser.T__7) | (1 << SolidityParser.T__8) | (1 << SolidityParser.T__9) | (1 << SolidityParser.T__10))) != 0):
                self.state = 108
                self.versionOperator()


            self.state = 111
            self.match(SolidityParser.VersionLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContractDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.idf = None # IdentifierContext
            self._contractPart = None # ContractPartContext
            self.parts = list() # of ContractPartContexts

        def identifier(self):
            return self.getTypedRuleContext(SolidityParser.IdentifierContext,0)


        def contractPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.ContractPartContext)
            else:
                return self.getTypedRuleContext(SolidityParser.ContractPartContext,i)


        def getRuleIndex(self):
            return SolidityParser.RULE_contractDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContractDefinition" ):
                return visitor.visitContractDefinition(self)
            else:
                return visitor.visitChildren(self)




    def contractDefinition(self):
